Notifications split -Between NotificationTab and pure notifications managment -Added .history (go check Notifications.history on console) -Freeze objects to forbid user manipulation -Fixed: Notification not on screen with a vertical scrollbar

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -337,7 +337,7 @@ border-top: none;
 }
 
 #notifications{
-position: absolute;
+position: fixed; /* Notifications are visible even if there is a vertical scrollbar */
 top: 0;
 left: 0;
 z-index: 1000;
